--- a/tsg.yml
+++ b/tsg.yml
@@ -6,31 +6,37 @@ context:
   site: data/site.graphql
 
 routes:
+  sitemap:
+    path: /sitemap.xml
+    template: feeds/sitemap.xml
+    context: data/sitemap.graphql
+
+
   homepage:
     path: /
     template: pages/homepage.html
     context: data/homepage.graphql
 
   posts:
-    path: /blog/:title
+    path: /blog/:title/
     template: pages/posts/post.html
     paginate:
       pageSize: 4
-      path: /blog/page-:num
-      firstPage: /blog
+      path: /blog/page-:num/
+      firstPage: /blog/
       template: pages/posts/landing.html
       data: data/posts.graphql
       itemName: post
 
   books:
-    path: /books/:title
+    path: /books/:title/
     template: pages/book.html
     paginate:
       data: data/books.graphql
       itemName: book
 
   authors:
-    path: /authors/:name
+    path: /authors/:name/
     template: pages/author.html
     paginate:
       data: data/authors.graphql
